# prompt-dot-exe

./: .gitignore  CHANGELOG.md  Cargo.toml  Prompt-Prefix.txt  Prompt20251004.md  README.md  READMELong.md  RELEASE_CHECKLIST.md  RawJournal20251007.md  RawJournal20251009.md  RustHallows20251006.md  Unclassified2025.txt  Unclassified20250706.txt  WORKSPACE_README.md  archive.txt  clean_history.txt  future_enhancements.md  git_status.txt  git_tracked_files.txt  recent_commits.txt  split_large_file.sh  tasks01.md  tasks02.md  tasks03.md  test-input_20250717_223322.txt  test-input_20250717_233119.txt  test-input_20250717_233511.txt  test-input_20250717_235023.txt
.kiro/specs/comprehensive-test-coverage/: design.md  requirements.md  tasks.md
.kiro/specs/interview-prep-system/: design.md  requirements.md  tasks.md
.kiro/specs/scalable-compression-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/universal-code-compressor/: STATUS.md  backlog.md  design.md  requirements.md  tasks.md
.kiro/steering/: How to think.txt  README.md  i00-pattern-list.txt  product.md  structure.md  tech.md  universal-compressor-error-avoidance.md
archive-to-txt/: CHANGELOG.md  Cargo.toml  README.md  archive.txt
archive-to-txt/src/: config.rs  error.rs  filter.rs  git.rs  lib.rs  main.rs  stats.rs  tree.rs  utils.rs
archive-to-txt/src/formatter/: mod.rs  text.rs
archive-to-txt/tests/: parallel_tests.rs
code-archiver/: Cargo.toml  README.md
code-archiver/src/: git.rs  lib.rs  main.rs
code-archiver/src/test_utils/: mod.rs
code-archiver/tests/: archive_validation_test.rs  cli_integration_test.rs  error_handling_test.rs  git_integration_test.rs  git_test_utils.rs  glob_pattern_test.rs  integration_tests.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/fs/: file.rs  metadata.rs  mod.rs
common/src/path/: extension.rs  mod.rs  name.rs
common/tests/: basic_tests.rs  integration_test.rs
file-splitter/src/: lib.rs
test-input/: README.md  example.ts
test-llm-optimization/: Cargo.toml  README.md
test-llm-optimization/src/: lib.rs
tests/: cli_integration_tests.rs
ts-compressor/: Cargo.toml  README.md  error_avoid.md
ts-compressor/.marscode/: deviceInfo.json
ts-compressor/src/: main.rs
ts-compressor/src/compression/: analyzer.rs  builder.rs  compressor.rs  concurrent_analyzer.rs  config.rs  database.rs  error.rs  generator.rs  integrity.rs  mod.rs  replacer.rs  types.rs  zstd_compressor.rs
ts-compressor/tests/: integration_system_tests.rs
zzArchive/: MVP_COMPLETION_SUMMARY.md  PRD for Codebase MVP_.md  Prompt-Prefix.txt  RELEASE_CHECKLIST.md  RailsViaRust20250707.txt  RefCode01.md  UBI Universal Code Compression Techniques Explored.txt  before-i-go-interview-irodov.txt  coderamp-labs-gitingest.txt  copy-paste-20250506.sh  filter-rules.txt  future_enhancements.md  tasks01.md  tasks03.md
zzArchive-interview-irodov-20250720/: README.md
