[workspace]
resolver = "2"
members = [
    "code-archiver",
    "file-splitter",
    "common"
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
git2 = "0.16"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
byte-unit = "5.0"
tempfile = "3.3"
assert_fs = "1.0"
predicates = "2.1"
criterion = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dunce = "1.0"
