[package]
name = "archive-to-txt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to create text-based archives of directory contents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/archive-to-txt"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
git = ["dep:git2"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
ignore = { version = "0.4", optional = true }
rayon = { version = "1.8", optional = true }
git2 = { workspace = true, optional = true, features = ["https"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
bytesize = "1.3"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "2.0"
rstest = "0.18"
