[package]
name = "archive-to-txt"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Rust library for creating text-based archives of directory contents with parallel processing support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/archive-to-txt"
keywords = ["archive", "text", "directory", "parallel"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"

[features]
default = ["parallel", "git"]
parallel = ["dep:rayon", "dep:crossbeam-channel"]
git = ["dep:git2", "dep:ignore"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.4"
ignore = { version = "0.4", optional = true }
globset = "0.4"
filetime = "0.2"
glob = "0.3.1"

# Parallel processing
rayon = { version = "1.8", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# Git integration
git2 = { version = "0.19", optional = true, features = ["https"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Formatting
bytesize = "1.3"
pretty-bytes = "0.2.2"
winnow = "0.5"
textwrap = "0.16"

# Logging
log = "0.4"
parking_lot = "0.12"

# Text processing
syntect = { version = "5.0", optional = true, default-features = false, features = ["parsing", "default-syntaxes"] }

[dev-dependencies]
# Testing
assert_fs = "1.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "2.0"
rstest = "0.18"
pretty_assertions = "1.3"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true
