[package]
name = "code-archiver"
version = "0.1.0"
edition = "2021"
description = "A tool for archiving code directories with filtering and formatting options"

[dependencies]
common = { path = "../common" }
ignore = "0.4"
globset = "0.4"
glob = "0.3"
git2 = { workspace = true, default-features = false, features = ["zlib-ng-compat"] }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
toml = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytesize = "1.1"
lazy_static = "1.4"
humantime = "2.2.0"

[features]
test-utils = []

[dev-dependencies]
assert_fs = "1.0"
tempfile = "3.3"
predicates = "2.1"
rstest = "0.18"
tracing-appender = "0.2.2"
env_logger = "0.10"
