[package]
name = "ts-compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_core = { version = "0.104", features = ["__common", "__visit", "ecma_parser", "ecma_transforms_typescript", "ecma_minifier", "ecma_codegen"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
mime_guess = "2.0"
mime = "0.3"
thiserror = "2.0"